--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "svg": "npx @svgr/cli --icon --replace-attr-values '#fff=currentColor' -d ./components/Icons ./Icons" 
   },
   "dependencies": {
     "css-loader": "^5.0.2",
@@ -18,6 +19,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "style-loader": "^2.0.0"
+    
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
@@ -25,6 +27,7 @@
     "@storybook/addon-essentials": "^6.1.18",
     "@storybook/addon-links": "^6.1.18",
     "@storybook/react": "^6.1.18",
+    "@svgr/cli": "^5.5.0",
     "babel-loader": "^8.2.2"
   }
 }
