--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "svg": "npx @svgr/cli --icon --replace-attr-values '#fff=currentColor' -d ./components/Icons ./Icons" 
+    "svg": "npx @svgr/cli --icon --replace-attr-values '#fff=currentColor' -d ./components/Icons ./Icons",
+    "sass": "sass --watch . "
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "css-loader": "^5.0.2",
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "style-loader": "^2.0.0"
-    
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
@@ -28,6 +29,7 @@
     "@storybook/addon-links": "^6.1.18",
     "@storybook/react": "^6.1.18",
     "@svgr/cli": "^5.5.0",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "sass": "^1.32.8"
   }
 }
