--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
-    "build": "npm run build-storybook & next build",
+    "build": "npm run build-storybook && next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook -o ./public/ui",
+    "build-storybook": "build-storybook -o public/ui",
     "svg": "npx @svgr/cli --icon --replace-attr-values '#fff=currentColor' -d ./components/Icons ./Icons",
     "sass": "sass --watch . "
   },
