--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "css-loader": "^5.0.2",
+    "date-fns": "^2.18.0",
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -31,6 +32,8 @@
     "@storybook/react": "^6.1.18",
     "@svgr/cli": "^5.5.0",
     "babel-loader": "^8.2.2",
-    "sass": "^1.32.8"
+    "postcss": "^8.2.6",
+    "postcss-nested": "^5.0.4",
+    "postcss-preset-env": "^6.7.0"
   }
 }
