--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "style-loader": "^2.0.0"
+    "style-loader": "^2.0.0",
+    "swr": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
@@ -31,6 +32,7 @@
     "@storybook/addon-links": "^6.1.18",
     "@storybook/react": "^6.1.18",
     "@svgr/cli": "^5.5.0",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "postcss": "^8.2.6",
     "postcss-nested": "^5.0.4",
