--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.18.0",
     "next": "^10.0.7",
     "react": "^17.0.1",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^17.0.1",
     "style-loader": "^2.0.0",
     "swr": "^0.4.2"
