--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
     "sass": "sass --watch . "
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "css-loader": "^5.0.2",
     "date-fns": "^2.18.0",
     "next": "^10.0.7",
-    "react": "^17.0.1",
-    "react-circular-progressbar": "^2.0.3",
-    "react-dom": "^17.0.1",
-    "style-loader": "^2.0.0",
-    "swr": "^0.4.2",
     "postcss": "^8.2.6",
     "postcss-nested": "^5.0.4",
     "postcss-preset-env": "^6.7.0",
-    "axios": "^0.21.1"
+    "react": "^17.0.1",
+    "react-circular-progressbar": "^2.0.3",
+    "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
+    "style-loader": "^2.0.0",
+    "swr": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
@@ -38,6 +39,5 @@
     "@storybook/react": "^6.1.18",
     "@svgr/cli": "^5.5.0",
     "babel-loader": "^8.2.2"
-   
   }
 }
