--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.2.6",
     "css-loader": "^5.0.2",
     "date-fns": "^2.18.0",
+    "firebase": "^8.3.0",
     "next": "^10.0.7",
     "postcss": "^8.2.6",
     "postcss-nested": "^5.0.4",
